--- a/package.json
+++ b/package.json
@@ -4,12 +4,61 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
+		"start": "cross-env NODE_ENV=development webpack-dev-server --hot --config=config/webpack.dev.config.js",
+		"server": "cross-env NODE_ENV=development && ./node_modules/.bin/nodemon nodemon --inspect --watch config --watch index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.15.2"
+		"bootstrap": "^4.2.1",
+		"express": "^4.15.2",
+		"font-awesome-sass-loader": "^2.0.1"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.2.3",
+		"@babel/core": "^7.2.2",
+		"@babel/node": "^7.2.2",
+		"@babel/plugin-proposal-class-properties": "^7.3.0",
+		"@babel/plugin-proposal-decorators": "^7.3.0",
+		"@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+		"@babel/plugin-proposal-function-sent": "^7.2.0",
+		"@babel/plugin-proposal-json-strings": "^7.2.0",
+		"@babel/plugin-proposal-numeric-separator": "^7.2.0",
+		"@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+		"@babel/plugin-proposal-throw-expressions": "^7.2.0",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"@babel/plugin-syntax-import-meta": "^7.2.0",
+		"@babel/plugin-transform-modules-commonjs": "^7.2.0",
+		"@babel/plugin-transform-runtime": "^7.2.0",
+		"@babel/polyfill": "^7.2.5",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-flow": "^7.0.0",
+		"@babel/register": "^7.0.0",
+		"@babel/runtime": "^7.3.1",
+		"autoprefixer": "^9.4.7",
+		"babel-eslint": "^10.0.1",
+		"babel-loader": "^8.0.5",
+		"cross-env": "^5.2.0",
+		"css-loader": "^2.1.0",
+		"eslint": "^5.13.0",
+		"eslint-config-airbnb": "^17.1.0",
+		"eslint-plugin-chai-friendly": "^0.4.1",
+		"eslint-plugin-class-property": "^1.1.0",
+		"eslint-plugin-import": "^2.16.0",
+		"eslint-plugin-jsx-a11y": "^6.2.0",
+		"eslint-plugin-mocha": "^5.2.1",
+		"eslint-plugin-react": "^7.12.4",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.5.0",
+		"node-sass": "^4.11.0",
+		"nodemon": "^1.18.9",
+		"postcss-loader": "^3.0.0",
+		"sass-loader": "^7.1.0",
+		"webpack": "^4.29.0",
+		"webpack-cli": "^3.2.1",
+		"webpack-dev-middleware": "^3.5.1",
+		"webpack-dev-server": "^3.1.14",
+		"webpack-hot-middleware": "^2.24.3"
 	}
 }
