--- a/package.json
+++ b/package.json
@@ -49,16 +49,15 @@
 		"eslint-plugin-jsx-a11y": "^6.2.0",
 		"eslint-plugin-mocha": "^5.2.1",
 		"eslint-plugin-react": "^7.12.4",
-		"html-webpack-plugin": "^3.2.0",
+		"file-loader": "^3.0.1",
 		"mini-css-extract-plugin": "^0.5.0",
 		"node-sass": "^4.11.0",
 		"nodemon": "^1.18.9",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^7.1.0",
+		"url-loader": "^1.1.2",
 		"webpack": "^4.29.0",
 		"webpack-cli": "^3.2.1",
-		"webpack-dev-middleware": "^3.5.1",
-		"webpack-dev-server": "^3.1.14",
-		"webpack-hot-middleware": "^2.24.3"
+		"webpack-dev-server": "^3.1.14"
 	}
 }
