--- a/package.json
+++ b/package.json
@@ -2,12 +2,37 @@
 	"name": "frontend-test",
 	"version": "0.0.1",
 	"description": "",
-	"main": "index.js",
+  "main": "index.js",
+  "standard": {
+    "env": [
+      "mocha"
+    ]
+  },
 	"scripts": {
 		"start": "cross-env NODE_ENV=development webpack-dev-server --hot --config=config/webpack.dev.config.js",
 		"server": "cross-env NODE_ENV=development && ./node_modules/.bin/nodemon nodemon --inspect --watch config --watch index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
+		"test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
+    "test:watch": "yarn test --watch"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "functions": 80,
+    "lines": 80,
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "node_modules/**",
+      "config/**",
+      "htdocs/**",
+      "layout/**",
+      "tests/**",
+      "babel.config.js"
+    ],
+    "instrument": false,
+    "sourceMap": false
+  },
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
@@ -39,6 +64,8 @@
 		"autoprefixer": "^9.4.7",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.5",
+		"babel-plugin-istanbul": "^5.1.0",
+		"chai": "^4.2.0",
 		"cross-env": "^5.2.0",
 		"css-loader": "^2.1.0",
 		"eslint": "^5.13.0",
@@ -50,11 +77,19 @@
 		"eslint-plugin-mocha": "^5.2.1",
 		"eslint-plugin-react": "^7.12.4",
 		"file-loader": "^3.0.1",
+		"husky": "^1.3.1",
+		"jsdom": "^13.2.0",
+		"jsdom-global": "^3.0.2",
 		"mini-css-extract-plugin": "^0.5.0",
+		"mocha": "^5.2.0",
+		"node-fetch": "^2.3.0",
 		"node-sass": "^4.11.0",
 		"nodemon": "^1.18.9",
+		"nyc": "^13.1.0",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^7.1.0",
+		"sinon": "^7.2.3",
+		"sinon-chai": "^3.3.0",
 		"url-loader": "^1.1.2",
 		"webpack": "^4.29.0",
 		"webpack-cli": "^3.2.1",
