--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 				"start": "cross-env NODE_ENV=development webpack-dev-server --hot --config=config/webpack.dev.config.js",
 				"server": "cross-env NODE_ENV=development && ./node_modules/.bin/nodemon nodemon --inspect --watch config --watch index.js",
 				"test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
-				"test:watch": "yarn test --watch"
+        "test:watch": "yarn test --watch",
+        "build": "cross-env NODE_ENV=production webpack -p --config=config/webpack.dev.config.js"
 		},
 		"nyc": {
 				"check-coverage": true,
