--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     ]
   },
 	"scripts": {
-		"start": "cross-env NODE_ENV=development webpack-dev-server --hot --config=config/webpack.dev.config.js",
-		"server": "cross-env NODE_ENV=development && ./node_modules/.bin/nodemon nodemon --inspect --watch config --watch index.js",
-		"test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
-    "test:watch": "yarn test --watch"
+		  "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch --hot --config=config/webpack.dev.config.js",
+      "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
+      "test:watch": "yarn test --watch",
+      "build": "yarn clear && ./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack -p --config=config/webpack.dev.config.js",
+      "server": "./node_modules/.bin/nodemon server/index.js",
+      "clear": "./node_modules/.bin/rimraf htdocs/assets/css && ./node_modules/.bin/rimraf htdocs/assets/scripts"
   },
   "nyc": {
     "check-coverage": true,
@@ -86,7 +88,8 @@
 		"node-sass": "^4.11.0",
 		"nodemon": "^1.18.9",
 		"nyc": "^13.1.0",
-		"postcss-loader": "^3.0.0",
+    "postcss-loader": "^3.0.0",
+    "rimraf": "^2.6.3",
 		"sass-loader": "^7.1.0",
 		"sinon": "^7.2.3",
 		"sinon-chai": "^3.3.0",
