--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 				"babel-loader": "^8.0.5",
 				"babel-plugin-istanbul": "^5.1.0",
 				"chai": "^4.2.0",
+				"chai-enzyme": "^1.0.0-beta.1",
 				"cross-env": "^5.2.0",
 				"css-loader": "^2.1.0",
 				"enzyme": "^3.8.0",
