--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "frontend-test",
-	"version": "0.0.1",
-	"description": "",
+  "name": "frontend-test",
+  "version": "0.0.1",
+  "description": "",
   "main": "index.js",
   "standard": {
-    "env": [
-      "mocha"
-    ]
+      "env": [
+          "mocha"
+      ]
   },
-	"scripts": {
-		  "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch --hot --config=config/webpack.dev.config.js",
+  "scripts": {
+      "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch --hot --config=config/webpack.dev.config.js",
       "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
       "test:watch": "yarn test --watch",
       "build": "yarn clear && ./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack -p --config=config/webpack.dev.config.js",
@@ -17,32 +17,32 @@
       "clear": "./node_modules/.bin/rimraf htdocs/assets/css && ./node_modules/.bin/rimraf htdocs/assets/scripts"
   },
   "nyc": {
-    "check-coverage": true,
-    "functions": 80,
-    "lines": 80,
-    "reporter": [
-      "text",
-      "html"
-    ],
-    "exclude": [
-      "node_modules/**",
-      "config/**",
-      "htdocs/**",
-      "layout/**",
-      "tests/**",
-      "babel.config.js"
-    ],
-    "instrument": false,
-    "sourceMap": false
+      "check-coverage": true,
+      "functions": 80,
+      "lines": 80,
+      "reporter": [
+          "text",
+          "html"
+      ],
+      "exclude": [
+          "node_modules/**",
+          "config/**",
+          "htdocs/**",
+          "layout/**",
+          "tests/**",
+          "babel.config.js"
+      ],
+      "instrument": false,
+      "sourceMap": false
   },
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-    "bootstrap": "^4.2.1",
-    "express": "^4.15.2",
-    "font-awesome-sass-loader": "^2.0.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+      "bootstrap": "^4.2.1",
+      "express": "^4.15.2",
+      "font-awesome-sass-loader": "^2.0.1",
+      "react": "^16.7.0",
+      "react-dom": "^16.7.0"
   },
   "devDependencies": {
       "@babel/cli": "^7.2.3",
@@ -71,6 +71,7 @@
       "babel-loader": "^8.0.5",
       "babel-plugin-istanbul": "^5.1.0",
       "chai": "^4.2.0",
+      "chai-enzyme": "^1.0.0-beta.1",
       "cross-env": "^5.2.0",
       "css-loader": "^2.1.0",
       "enzyme": "^3.8.0",
