--- a/package.json
+++ b/package.json
@@ -1,63 +1,107 @@
 {
-	"name": "frontend-test",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "cross-env NODE_ENV=development webpack-dev-server --hot --config=config/webpack.dev.config.js",
-		"server": "cross-env NODE_ENV=development && ./node_modules/.bin/nodemon nodemon --inspect --watch config --watch index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"bootstrap": "^4.2.1",
-		"express": "^4.15.2",
-		"font-awesome-sass-loader": "^2.0.1"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.2.2",
-		"@babel/node": "^7.2.2",
-		"@babel/plugin-proposal-class-properties": "^7.3.0",
-		"@babel/plugin-proposal-decorators": "^7.3.0",
-		"@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-		"@babel/plugin-proposal-function-sent": "^7.2.0",
-		"@babel/plugin-proposal-json-strings": "^7.2.0",
-		"@babel/plugin-proposal-numeric-separator": "^7.2.0",
-		"@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-		"@babel/plugin-proposal-throw-expressions": "^7.2.0",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/plugin-syntax-import-meta": "^7.2.0",
-		"@babel/plugin-transform-modules-commonjs": "^7.2.0",
-		"@babel/plugin-transform-runtime": "^7.2.0",
-		"@babel/polyfill": "^7.2.5",
-		"@babel/preset-env": "^7.3.1",
-		"@babel/preset-flow": "^7.0.0",
-		"@babel/register": "^7.0.0",
-		"@babel/runtime": "^7.3.1",
-		"autoprefixer": "^9.4.7",
-		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.5",
-		"cross-env": "^5.2.0",
-		"css-loader": "^2.1.0",
-		"eslint": "^5.13.0",
-		"eslint-config-airbnb": "^17.1.0",
-		"eslint-plugin-chai-friendly": "^0.4.1",
-		"eslint-plugin-class-property": "^1.1.0",
-		"eslint-plugin-import": "^2.16.0",
-		"eslint-plugin-jsx-a11y": "^6.2.0",
-		"eslint-plugin-mocha": "^5.2.1",
-		"eslint-plugin-react": "^7.12.4",
-		"file-loader": "^3.0.1",
-		"mini-css-extract-plugin": "^0.5.0",
-		"node-sass": "^4.11.0",
-		"nodemon": "^1.18.9",
-		"postcss-loader": "^3.0.0",
-		"sass-loader": "^7.1.0",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.29.0",
-		"webpack-cli": "^3.2.1",
-		"webpack-dev-server": "^3.1.14"
-	}
+  "name": "frontend-test",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.js",
+  "standard": {
+      "env": [
+          "mocha"
+      ]
+  },
+  "scripts": {
+      "start": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --watch --hot --config=config/webpack.dev.config.js",
+      "test": "./node_modules/.bin/cross-env NODE_ENV=test ./node_modules/.bin/mocha --require @babel/register tests/**/*.test.js",
+      "test:watch": "yarn test --watch",
+      "build": "yarn clear && ./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack -p --config=config/webpack.dev.config.js",
+      "server": "./node_modules/.bin/nodemon server/index.js",
+      "clear": "./node_modules/.bin/rimraf htdocs/assets/css && ./node_modules/.bin/rimraf htdocs/assets/scripts"
+  },
+  "nyc": {
+      "check-coverage": true,
+      "functions": 80,
+      "lines": 80,
+      "reporter": [
+          "text",
+          "html"
+      ],
+      "exclude": [
+          "node_modules/**",
+          "config/**",
+          "htdocs/**",
+          "layout/**",
+          "tests/**",
+          "babel.config.js"
+      ],
+      "instrument": false,
+      "sourceMap": false
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+      "bootstrap": "^4.2.1",
+      "express": "^4.15.2",
+      "font-awesome-sass-loader": "^2.0.1",
+      "react": "^16.7.0",
+      "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+      "@babel/cli": "^7.2.3",
+      "@babel/core": "^7.2.2",
+      "@babel/node": "^7.2.2",
+      "@babel/plugin-proposal-class-properties": "^7.3.0",
+      "@babel/plugin-proposal-decorators": "^7.3.0",
+      "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+      "@babel/plugin-proposal-function-sent": "^7.2.0",
+      "@babel/plugin-proposal-json-strings": "^7.2.0",
+      "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+      "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
+      "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+      "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+      "@babel/plugin-syntax-import-meta": "^7.2.0",
+      "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+      "@babel/plugin-transform-runtime": "^7.2.0",
+      "@babel/polyfill": "^7.2.5",
+      "@babel/preset-env": "^7.3.1",
+      "@babel/preset-flow": "^7.0.0",
+      "@babel/preset-react": "^7.0.0",
+      "@babel/register": "^7.0.0",
+      "@babel/runtime": "^7.3.1",
+      "autoprefixer": "^9.4.7",
+      "babel-eslint": "^10.0.1",
+      "babel-loader": "^8.0.5",
+      "babel-plugin-istanbul": "^5.1.0",
+      "chai": "^4.2.0",
+      "chai-enzyme": "^1.0.0-beta.1",
+      "cross-env": "^5.2.0",
+      "css-loader": "^2.1.0",
+      "enzyme": "^3.8.0",
+      "enzyme-adapter-react-16": "^1.8.0",
+      "eslint": "^5.13.0",
+      "eslint-config-airbnb": "^17.1.0",
+      "eslint-plugin-chai-friendly": "^0.4.1",
+      "eslint-plugin-class-property": "^1.1.0",
+      "eslint-plugin-import": "^2.16.0",
+      "eslint-plugin-jsx-a11y": "^6.2.0",
+      "eslint-plugin-mocha": "^5.2.1",
+      "eslint-plugin-react": "^7.12.4",
+      "file-loader": "^3.0.1",
+      "husky": "^1.3.1",
+      "jsdom": "^13.2.0",
+      "jsdom-global": "^3.0.2",
+      "mini-css-extract-plugin": "^0.5.0",
+      "mocha": "^5.2.0",
+      "node-fetch": "^2.3.0",
+      "node-sass": "^4.11.0",
+      "nodemon": "^1.18.9",
+      "nyc": "^13.1.0",
+      "postcss-loader": "^3.0.0",
+      "rimraf": "^2.6.3",
+      "sass-loader": "^7.1.0",
+      "sinon": "^7.2.3",
+      "sinon-chai": "^3.3.0",
+      "url-loader": "^1.1.2",
+      "webpack": "^4.29.0",
+      "webpack-cli": "^3.2.1",
+      "webpack-dev-server": "^3.1.14"
+  }
 }
