mudando versão do terser

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "font-awesome-sass-loader": "^2.0.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
-        "terser": "^3.16.1"
+        "terser": "3.14.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.2.3",
