--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 				"express": "^4.15.2",
 				"font-awesome-sass-loader": "^2.0.1",
 				"react": "^16.7.0",
-				"react-dom": "^16.7.0"
+        "react-dom": "^16.7.0",
+        "terser": "3.14.1"
 		},
 		"devDependencies": {
 				"@babel/cli": "^7.2.3",
